# TrackTime

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  config.cpp  config.hpp  design-decisions  install.sh  log.h  main.cpp  socket.cpp  socket.h  socket.hpp  timeTracking.cpp  timeTracking.h  timeTracking.hpp  uninstall.sh  util.cpp  util.hpp  yotta.cbp  yotta.service  yotta_cli.cpp  yotta_daemon.cpp  yotta_daemon.h  yotta_daemon.hpp
